feat: pass WHMCS package options to containers
